feat: job-list add query search
