# apps/api/swagger.json
@@ -394,6 +394,14 @@
               "type": "integer"
             },
             "description": "每页数量"
+          },
+          {
+            "in": "query",
+            "name": "keyword",
+            "schema": {
+              "type": "string"
+            },
+            "description": "模糊搜索关键词"
           }
         ],
         "responses": {
